Changelog
=========

0.8 (unreleased)
----------------

* Added Spanish translation [hvelarde]

* Fixed "Deadlock when viewing an object on which the user has not the View
  permission" issue with patch provided by glenfant [hvelarde]


0.7 (2011-07-12)
----------------

* i18n support for Facebook button. Now we check which languages the
  user accepts then provide the right link [erico_andrei]

* Add conditions to show each provider [erico_andrei]

* Refactor viewlet code [erico_andrei]

* Enable controlpanel tabbing [erico_andrei]


0.6 (2011-06-09)
----------------

* Support for plusone google button [cleberjsantos]

* jQuery Loading the buttons [cleberjsantos]


0.5 (2011-04-18)
----------------

* Support for Twitter and Facebook [cleberjsantos]

* Initial release [cleberjsantos]